<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A3EDF6"
        android:text="@string/textView"
        android:textSize="20sp"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/c346"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c346" />

        <TextView
            android:id="@+id/c206"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c206" />

        <TextView
            android:id="@+id/c203"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c203" />

        <TextView
            android:id="@+id/c218"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c218" />

        <TextView
            android:id="@+id/c235"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c235" />
    </LinearLayout>

</LinearLayout>